# jed-ai-rag-pipeline

./: .envrc.example  .gitignore  .pre-commit-config.yaml  BRIEF.md  README.md  SCALING.md  app.py  eval_dataset.json  eval_report.html  eval_rulebook.md  pyproject.toml
rag_pipeline/: __init__.py  chain.py  db.py  embedder.py  embedding.py  indexer.py  parser.py  retriever.py  scripts.py  settings.py  types.py
rag_pipeline/chunking/: __init__.py  fixed_size.py  hierarchical.py  page.py
rag_pipeline/eval/: __init__.py  __main__.py  dataset.py  report.py  runner.py  settings.py  types.py
rag_pipeline/indexer/: __init__.py  context_chain.py  indexer.py
