[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Implementation of the Factored Jed-AI mission 'Rag Pipeline from scratch'"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.11.1",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
]

[tool.uv]
package = true

[project.scripts]
dev = "rag_pipeline.scripts:dev"

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "pre-commit>=4.6.0",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
